--- a/pom.xml
+++ b/pom.xml
@@ -10,12 +10,12 @@
     </parent>
     <groupId>com.yh</groupId>
     <artifactId>weather-push</artifactId>
-    <version>1.0.2-RELEASE</version>
+    <version>1.1-SNAPSHOT</version>
     <name>weather-push</name>
     <description>weather-push</description>
     <properties>
         <java.version>17</java.version>
-        <docker.maven.plugin.version>1.2.2</docker.maven.plugin.version>
+        <sa-token.version>1.34.0</sa-token.version>
         <log4j2.version>2.22.0</log4j2.version>
         <mapstruct.version>1.5.5.Final</mapstruct.version>
     </properties>
@@ -53,7 +53,7 @@
         <dependency>
             <groupId>com.alibaba</groupId>
             <artifactId>fastjson</artifactId>
-            <version>1.2.83</version>
+            <version>2.0.32</version>
         </dependency>
         <dependency>
             <groupId>org.apache.httpcomponents.client5</groupId>
@@ -132,13 +132,13 @@
         <dependency>
             <groupId>cn.dev33</groupId>
             <artifactId>sa-token-spring-boot3-starter</artifactId>
-            <version>1.34.0</version>
+            <version>${sa-token.version}</version>
         </dependency>
         <!-- Sa-Token 整合 jwt -->
         <dependency>
             <groupId>cn.dev33</groupId>
             <artifactId>sa-token-jwt</artifactId>
-            <version>1.34.0</version>
+            <version>${sa-token.version}</version>
         </dependency>
 
         <!-- https://mvnrepository.com/artifact/org.mapstruct/mapstruct -->
@@ -154,7 +154,7 @@
         </dependency>
         <dependency>
             <groupId>com.github.xiaoymin</groupId>
-            <artifactId>knife4j-openapi2-spring-boot-starter</artifactId>
+            <artifactId>knife4j-openapi3-jakarta-spring-boot-starter</artifactId>
             <version>4.0.0</version>
         </dependency>
         <dependency>
