--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -48,8 +48,21 @@ hf-weather:
 holiday:
   url: https://cdn.jsdelivr.net/gh/NateScarlet/holiday-cn@master
 
+# springdoc-openapi项目配置
+springdoc:
+  api-docs:
+    path: /v3/api-docs
+  group-configs:
+    - group: 'default'
+      paths-to-match: '/**'
+      packages-to-scan: com.yh.weatherpush.controller
+# knife4j的增强配置，不需要增强可以不配
 knife4j:
-  enable: false
-  setting:
-    custom-code: 500
-    enable-footer-custom: false
+  # 开启增强配置
+  enable: true
+
+# 访问白名单
+white-list:
+  - /admin/login
+  - /error
+  - /holidays/**
