--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -1,11 +1,11 @@
 spring:
   datasource:
-    url: jdbc:mysql://127.0.0.1:3306/weather?characterEncoding=utf-8&serverTimezone=GMT%2B8&allowPublicKeyRetrieval=true&useSSL=false&autoReconnect=true&allowMultiQueries=true&rewriteBatchedStatements=true
+    url: jdbc:mysql://mysql:3306/weather?characterEncoding=utf-8&serverTimezone=GMT%2B8&allowPublicKeyRetrieval=true&useSSL=false&autoReconnect=true&allowMultiQueries=true&rewriteBatchedStatements=true
     username: root
     password: root
   data:
     redis:
-      host: 127.0.0.1 # Redis服务器地址
+      host: redis # Redis服务器地址
       database: 0 # Redis数据库索引（默认为0）
       port: 6379 # Redis服务器连接端口
       password: root # Redis服务器连接密码（默认为空）
